<resources>
    <string name="app_name">Game of Thrones Quiz</string>
    <string name="title">Game of Thrones Quiz</string>
    <string name="westoros">Westoros</string>
    <string name="middleearth">Middle Earth</string>
    <string name="azeroth">Azeroth</string>
    <string name="Camelot">Camelot</string>
    <string name="questionsTwo">"2. What does \"Khaleesi\" mean?"</string>
    <string name="warrior">Warrior</string>
    <string name="wife">Wife of the Khal</string>
    <string name="mother">Mother</string>
    <string name="queen">Queen</string>
    <string name="editTextTitle">Please enter name:</string>
    <string name="questionOne">1. In what world does the show Game of Thrones exist?</string>
    <string name="submitButton">Submit Quiz</string>
    <string name="questionThree">3. Who was the Iron Throne originally made for?</string>
    <string name="aegon">Aegon I Targaryen</string>
    <string name="robert">Robert Baratheon</string>
    <string name="eddard">Eddard Stark</string>
    <string name="rhaegar">Rhaegar Targaryem</string>
    <string name="questionFour">4. Who attempts to kill Tyrion Lannister on the Battle of Blackwater Bay?</string>
    <string name="mandenMoore">Ser Mandon Moore</string>
    <string name="joffrey">Joffrey Baratheon</string>
    <string name="questionFive">5. Who saves Sansa Stark during the Riots of King\'s Landing?</string>
    <string name="hound">The Hound</string>
    <string name="tyrion">Tyrion Lannister</string>
    <string name="baelish">Petyr Baelish</string>
    <string name="questionSix">6. Which of Daenerys Targaryen\'s three dragons are the largest?</string>
    <string name="dragon1">Rhaegal</string>
    <string name="dragon2">Drogon</string>
    <string name="dragon3">Viserion</string>
    <string name="dragon4">Balerion</string>
    <string name="questionSeven">7. Select the correct names of Daenerys Targaryen\'s three dragons.</string>
    <string name="questionEight">8. Which two books below were NOT written by George R.R. Martin?</string>
    <string name="book1">The Winds of Winter</string>
    <string name="book2">A Clash of Kings</string>
    <string name="book3">The Fires of Heaven</string>
    <string name="book4">A Crown of Swords</string>
    <string name="questionNine">9. Who created the White Walkers?</string>
    <string name="hint">Enter here...</string>
</resources>
